fix(css): 125 - text-align

--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,5 @@
 
 body {
     font-size:32px;
+    text-align: center;
 }
